build/errors/testdata/unknown-field-suggestion.q
struct Point {
	x Int
	y Int
}

main() {
	let p = Point()
	p.xx = 5
}
